--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.9.0",
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
+    "ramda": "^0.21.0",
     "react": "^0.14.3",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
