--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.3",
+    "react-gsap-enhancer": "^0.2.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
