--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "babel-preset-stage-1": "^6.1.18",
     "lodash": "^3.10.1",
     "ramda": "^0.21.0",
-    "react": "^0.14.3",
+    "react": "^0.14.8",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.3",
-    "react-gsap-enhancer": "^0.2.2",
+    "react-motion": "^0.4.4",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
