--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-sass": "^2.3.2",
     "jquery": "^2.2.1",
     "jsdom": "^8.1.0",
